--- a/src/Styles/_GlobalStyles.scss
+++ b/src/Styles/_GlobalStyles.scss
@@ -36,6 +36,24 @@ a, button, NavLink{
   }
 }
 
+@mixin tablet1 {
+  @media screen and (min-width: 1100px) and (max-width: 1200px) {
+    @content
+  }
+}
+
+@mixin tablet2 {
+  @media screen and (min-width: 600px) and (max-width: 1099px) {
+    @content
+  }
+}
+
+@mixin tablet3 {
+  @media screen and (min-width: 601px) and (max-width: 1000px) {
+    @content
+  }
+}
+
 ;
 
 .header {
