--- a/src/Components/Chef/_Chef.scss
+++ b/src/Components/Chef/_Chef.scss
@@ -84,15 +84,14 @@
     @include desktop{
       width: 478px;
       height: 372px;
-
     }
     img{
       width: 100%;
       height: 270px;
       object-fit: cover;
       @include desktop{
-        width: auto;
-        height: auto;
+        width: 100%;
+        height: 373px;
       }
     }
   }
