--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -6,7 +6,8 @@
   align-items: center;
   width: 100%;
   height: 273px;
-  background-image: url("../../public/Images/hero.png");
+  //background-image: url("../../public/Images/hero.png");
+  background-image: url($hero-path);
   background-size: cover;
   @include desktop {
     height: 696px;
