--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -899,7 +899,7 @@ a:hover, button:hover, NavLink:hover {
   align-items: center;
   width: 100%;
   height: 273px;
-  background-image: url("../../public/Images/hero.png");
+  background-image: url("../Images/hero.png");
   background-size: cover;
 }
 @media screen and (min-width: 600px) {
