--- a/src/Styles/_GlobalStyles.scss
+++ b/src/Styles/_GlobalStyles.scss
@@ -15,6 +15,8 @@ $regular-weight: 200;
 $bold-weight: 400;
 $selected-bold-weight: 1000;
 
+$hero-path: '../Images/hero.png';
+
 a, button, NavLink{
   &:hover{
     cursor: pointer;
