--- a/src/Styles/Style.scss
+++ b/src/Styles/Style.scss
@@ -20,3 +20,6 @@
 @import "animate.css/animate.min.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import "../Components/User/Login/Login";
+@import "../Components/User/Signup/Signup";
+@import "../Components/User/UserPage";
