--- a/src/Components/Cart/_SideCart.scss
+++ b/src/Components/Cart/_SideCart.scss
@@ -15,21 +15,26 @@
     height: 586px;
   }
   img {
-    position: absolute;
-    left: 167px;
-    top: 63px;
+    position: relative;
+    //left: 167px;
+    margin: auto;
+    padding-left: 45px;
+    top: -20px;
     width: 45px;
     opacity: 0.5;
     @include desktop{
+      position: absolute;
       left: 224px;
       top: 243px;
       width: 49px;
+      padding-left: 0;
     }
   }
   p {
-    position: absolute;
-    left: 117px;
-    bottom: 45px;
+    position: relative;
+    margin: auto;
+    //left: 117px;
+    bottom: 15px;
     width: 145px;
 
     font-weight: $regular-weight;
@@ -38,6 +43,7 @@
     text-transform: uppercase;
     opacity: 0.5;
     @include desktop{
+      position: absolute;
       left: 188px;
       bottom: 224px;
       width: 121px;
